src/ui/lidarr_ui/library/snapshots/managarr__ui__lidarr_ui__library__edit_artist_ui__edit_artist_ui_tests__tests__snapshot_tests__edit_artist_EditArtistPrompt.snap
---
source: src/ui/lidarr_ui/library/edit_artist_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                            ╭───────────────────────────────────────────────  Edit -   ───────────────────────────────────────────────╮                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                  ╭───╮                                                  │                              
                            │                                       Monitored: │ ✔ │                                                  │                              
                            │                                                  ╰───╯                                                  │                              
                            │                                                  ╭─────────────────────────────────────────────────╮    │                              
                            │                              Monitor New Albums: │All Albums                                     ▼ │    │                              
                            │                                                  ╰─────────────────────────────────────────────────╯    │                              
                            │                                                  ╭─────────────────────────────────────────────────╮    │                              
                            │                                 Quality Profile: │Lossless                                       ▼ │    │                              
                            │                                                  ╰─────────────────────────────────────────────────╯    │                              
                            │                                                  ╭─────────────────────────────────────────────────╮    │                              
                            │                                Metadata Profile: │Standard                                       ▼ │    │                              
                            │                                                  ╰─────────────────────────────────────────────────╯    │                              
                            │                                                  ╭─────────────────────────────────────────────────╮    │                              
                            │                                            Path: │/nfs/music                                       │    │                              
                            │                                                  ╰─────────────────────────────────────────────────╯    │                              
                            │                                                  ╭─────────────────────────────────────────────────╮    │                              
                            │                                            Tags: │alex                                             │    │                              
                            │                                                  ╰─────────────────────────────────────────────────╯    │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │╭───────────────────────────────────────────────────╮╭──────────────────────────────────────────────────╮│                              
                            ││                       Save                        ││                      Cancel                      ││                              
                            │╰───────────────────────────────────────────────────╯╰──────────────────────────────────────────────────╯│                              
                            ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────╯
