src/ui/lidarr_ui/library/snapshots/managarr__ui__lidarr_ui__library__edit_artist_ui__edit_artist_ui_tests__tests__snapshot_tests__edit_artist_EditArtistSelectMonitorNewItems.snap
---
source: src/ui/lidarr_ui/library/edit_artist_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                            ╭───────────────────────────────────  Edit - Alex (American pianist)  ────────────────────────────────────╮                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                  ╭───╮                                                  │                              
                            │                                       Monitored: │ ✔ │                                                  │                              
                            │                                                  ╰───╯                                                  │                              
                            │                                     ╭───────────────────────────────╮──────────────────────────────╮    │                              
                            │                              Monitor│All Albums                     │                            ▼ │    │                              
                            │                                     │No New Albums                  │──────────────────────────────╯    │                              
                            │                                     │New Albums                     │──────────────────────────────╮    │                              
                            │                                 Qual│                               │                            ▼ │    │                              
                            │                                     │                               │──────────────────────────────╯    │                              
                            │                                     │                               │──────────────────────────────╮    │                              
                            │                                Metad│                               │                            ▼ │    │                              
                            │                                     │                               │──────────────────────────────╯    │                              
                            │                                     │                               │──────────────────────────────╮    │                              
                            │                                     │                               │                              │    │                              
                            │                                     │                               │──────────────────────────────╯    │                              
                            │                                     │                               │──────────────────────────────╮    │                              
                            │                                     │                               │                              │    │                              
                            │                                     ╰───────────────────────────────╯──────────────────────────────╯    │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │╭───────────────────────────────────────────────────╮╭──────────────────────────────────────────────────╮│                              
                            ││                       Save                        ││                      Cancel                      ││                              
                            │╰───────────────────────────────────────────────────╯╰──────────────────────────────────────────────────╯│                              
                            ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────╯
